feat: start from misson4 base code