@@ -2,14 +2,15 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Stream;
@@ -20,9 +21,11 @@ public class FileBinaryContentRepository implements BinaryContentRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileBinaryContentRepository() {
-        this.DIRECTORY = Path.of(System.getProperty("user.dir"),"file-data-map", BinaryContent.class.getSimpleName());
-        if (Files.notExists(DIRECTORY)){
+    public FileBinaryContentRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, BinaryContent.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
             try {
                 Files.createDirectories(DIRECTORY);
             } catch (IOException e) {
@@ -33,22 +36,6 @@ public class FileBinaryContentRepository implements BinaryContentRepository {
 
     private Path resolvePath(UUID id) {
         return DIRECTORY.resolve(id + EXTENSION);
-    }
-
-
-    @Override
-    public BinaryContent create(BinaryContent binaryContent) {
-       Path path = resolvePath(binaryContent.getId());
-        try (
-                FileOutputStream fos = new FileOutputStream(path.toFile());
-                ObjectOutputStream oos = new ObjectOutputStream(fos)
-
-        ) {
-            oos.writeObject(binaryContent);
-                return binaryContent;
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
     }
 
     @Override
@@ -62,34 +49,24 @@ public class FileBinaryContentRepository implements BinaryContentRepository {
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-
         return binaryContent;
     }
 
     @Override
-    public boolean existsById(UUID id) {
-        Path path = resolvePath(id);
-        return Files.exists(path);
-    }
-
-    @Override
     public Optional<BinaryContent> findById(UUID id) {
-        BinaryContent binaryContent = null;
+        BinaryContent binaryContentNullable = null;
         Path path = resolvePath(id);
         if (Files.exists(path)) {
             try (
                     FileInputStream fis = new FileInputStream(path.toFile());
                     ObjectInputStream ois = new ObjectInputStream(fis)
             ) {
-               binaryContent = (BinaryContent) ois.readObject();
+                binaryContentNullable = (BinaryContent) ois.readObject();
             } catch (IOException | ClassNotFoundException e) {
                 throw new RuntimeException(e);
             }
         }
-
-        return Optional.ofNullable(Optional.ofNullable(binaryContent)
-                .orElseThrow(() -> new NoSuchElementException("BinaryContent with id " + id + " not found")));
-
+        return Optional.ofNullable(binaryContentNullable);
     }
 
     @Override
@@ -114,36 +91,18 @@ public class FileBinaryContentRepository implements BinaryContentRepository {
         }
     }
 
-//    @Override
-//    public Optional<BinaryContent> findAllByIdIn(Iterable<UUID> ids) {
-//        BinaryContent binaryContent = null;
-//        Path path = resolvePath(ids.iterator().next());
-//        if (Files.exists(path)) {
-//            try (
-//                    FileInputStream fis = new FileInputStream(path.toFile());
-//                    ObjectInputStream ois = new ObjectInputStream(fis)
-//            ) {
-//                binaryContent = (BinaryContent) ois.readObject();
-//            } catch (IOException | ClassNotFoundException e) {
-//                throw new RuntimeException(e);
-//            }
-//        }
-//
-//        return Optional.ofNullable(Optional.ofNullable(binaryContent)
-//                .orElseThrow(() -> new NoSuchElementException("User with id " + ids + " not found")));
-//
-//    }
-
+    @Override
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
+    }
 
     @Override
     public void deleteById(UUID id) {
         Path path = resolvePath(id);
-        if (Files.notExists(path)) {
-            throw new NoSuchElementException("BinaryContent with id " + id + " not found");
-        }
         try {
             Files.delete(path);
-        } catch (Exception e) {
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
