@@ -1,17 +1,19 @@
 package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Message;
+import com.sprint.mission.discodeit.repository.MessageRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
-import com.sprint.mission.discodeit.repository.MessageRepository;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
 @ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 @Repository
@@ -19,12 +21,14 @@ public class FileMessageRepository implements MessageRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileMessageRepository() {
-        this.DIRECTORY = Path.of(System.getProperty("user.dir"), "file-data-map", Message.class.getSimpleName());
+    public FileMessageRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, Message.class.getSimpleName());
         if (Files.notExists(DIRECTORY)) {
             try {
                 Files.createDirectories(DIRECTORY);
-            } catch (Exception e) {
+            } catch (IOException e) {
                 throw new RuntimeException(e);
             }
         }
@@ -36,62 +40,39 @@ public class FileMessageRepository implements MessageRepository {
 
     @Override
     public Message save(Message message) {
-        Path path = resolvePath(message.getMessageId());
+        Path path = resolvePath(message.getId());
         try (
                 FileOutputStream fos = new FileOutputStream(path.toFile());
                 ObjectOutputStream oos = new ObjectOutputStream(fos)
         ) {
             oos.writeObject(message);
-        }catch (Exception e) {
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
         return message;
     }
 
     @Override
-    public Optional<Message> findByMessageId(UUID messageId) {
+    public Optional<Message> findById(UUID id) {
         Message messageNullable = null;
-        Path path = resolvePath(messageId);
+        Path path = resolvePath(id);
         if (Files.exists(path)) {
             try (
                     FileInputStream fis = new FileInputStream(path.toFile());
                     ObjectInputStream ois = new ObjectInputStream(fis)
             ) {
                 messageNullable = (Message) ois.readObject();
-            } catch (Exception e) {
+            } catch (IOException | ClassNotFoundException e) {
                 throw new RuntimeException(e);
             }
         }
-        return Optional.ofNullable(Optional.ofNullable(messageNullable)
-                .orElseThrow(() -> new NoSuchElementException("Message with id " + messageId + " not found")));
-    }
-
-
-    @Override
-    public List<Message> findAllMessage() {
-        try {
-            return Files.list(DIRECTORY)
-                    .filter(path -> path.toString().endsWith(EXTENSION))
-                    .map(path -> {
-                        try (
-                                FileInputStream fis = new FileInputStream(path.toFile());
-                                ObjectInputStream ois = new ObjectInputStream(fis)
-                        ) {
-                            return (Message) ois.readObject();
-                        } catch (IOException | ClassNotFoundException e) {
-                            throw new RuntimeException(e);
-                        }
-                    })
-                    .toList();
-        }catch (IOException e){
-            throw new RuntimeException(e);
-        }
+        return Optional.ofNullable(messageNullable);
     }
 
     @Override
     public List<Message> findAllByChannelId(UUID channelId) {
-        try {
-            return Files.list(DIRECTORY)
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
                     .filter(path -> path.toString().endsWith(EXTENSION))
                     .map(path -> {
                         try (
@@ -103,49 +84,22 @@ public class FileMessageRepository implements MessageRepository {
                             throw new RuntimeException(e);
                         }
                     })
+                    .filter(message -> message.getChannelId().equals(channelId))
                     .toList();
-        }catch (IOException e){
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
     @Override
-    public List<Message> findBySenderId(UUID userId) {
-        return findAllMessage().stream()
-                .filter(m -> m.getUserId().equals(userId))
-                .toList();
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
     }
 
     @Override
-    public List<Message> findByChannelId(UUID channelId) {
-        return findAllMessage().stream()
-                .filter(m -> m.getChannelId().equals(channelId))
-                .toList();
-    }
-
-    @Override
-    public boolean existsById(UUID messageId) {
-        Message messageNullable = null;
-        Path path = resolvePath(messageId);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ){
-                messageNullable = (Message) ois.readObject();
-            }catch (IOException | ClassNotFoundException e){
-                throw new RuntimeException(e);
-            }
-        }
-        return messageNullable != null;
-    }
-
-    @Override
-    public void deleteById(UUID messageId) {
-        Path path = resolvePath(messageId);
-        if (Files.notExists(path)) {
-            throw new NoSuchElementException("Message with id " + messageId + " not found");
-        }
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
         try {
             Files.delete(path);
         } catch (IOException e) {
@@ -153,5 +107,9 @@ public class FileMessageRepository implements MessageRepository {
         }
     }
 
-
+    @Override
+    public void deleteAllByChannelId(UUID channelId) {
+        this.findAllByChannelId(channelId)
+                .forEach(message -> this.deleteById(message.getId()));
+    }
 }
