@@ -1,17 +1,16 @@
 package com.sprint.mission.discodeit.repository.file;
 
-import com.sprint.mission.discodeit.entity.Channel;
-import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.entity.status.ReadStatus;
+import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Stream;
@@ -22,12 +21,14 @@ public class FileReadStatusRepository implements ReadStatusRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileReadStatusRepository() {
-        this.DIRECTORY = Path.of(System.getProperty("user.dir"), "file-data-map", ReadStatus.class.getSimpleName());
-        if (Files.notExists(DIRECTORY)){
+    public FileReadStatusRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, ReadStatus.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
             try {
                 Files.createDirectories(DIRECTORY);
-            } catch (Exception e) {
+            } catch (IOException e) {
                 throw new RuntimeException(e);
             }
         }
@@ -37,36 +38,18 @@ public class FileReadStatusRepository implements ReadStatusRepository {
         return DIRECTORY.resolve(id + EXTENSION);
     }
 
-
     @Override
-    public ReadStatus read(User userId, Channel channelId) {
-        Path path = resolvePath(userId.getUserId());
+    public ReadStatus save(ReadStatus readStatus) {
+        Path path = resolvePath(readStatus.getId());
         try (
                 FileOutputStream fos = new FileOutputStream(path.toFile());
                 ObjectOutputStream oos = new ObjectOutputStream(fos)
-                ){
-            oos.writeObject(userId);
-        }catch (IOException e){
+        ) {
+            oos.writeObject(readStatus);
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
-       return null;
-    }
-
-    @Override
-    public Optional<ReadStatus> findByUserIdAndChannelId(UUID userId, UUID channelId) {
-        ReadStatus readStatus = null;
-        Path path = resolvePath(userId);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-                readStatus = (ReadStatus) ois.readObject();
-            } catch (IOException | ClassNotFoundException e) {
-                throw new RuntimeException(e);
-            }
-        }
-        return Optional.ofNullable(readStatus);
+        return readStatus;
     }
 
     @Override
@@ -84,6 +67,28 @@ public class FileReadStatusRepository implements ReadStatusRepository {
             }
         }
         return Optional.ofNullable(readStatusNullable);
+    }
+
+    @Override
+    public List<ReadStatus> findAllByUserId(UUID userId) {
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (ReadStatus) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .filter(readStatus -> readStatus.getUserId().equals(userId))
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
@@ -109,79 +114,9 @@ public class FileReadStatusRepository implements ReadStatusRepository {
     }
 
     @Override
-    public List<ReadStatus> findAllByUserId(UUID userId) {
-        try {
-            return Files.list(DIRECTORY)
-                    .filter(path -> path.toString().endsWith(EXTENSION))
-                    .map(path -> {
-                        try (
-                                FileInputStream fis = new FileInputStream(path.toFile());
-                                ObjectInputStream ois = new ObjectInputStream(fis)
-                        ) {
-                            return (ReadStatus) ois.readObject();
-                        } catch (IOException | ClassNotFoundException e) {
-                            throw new RuntimeException(e);
-                        }
-                    }).toList();
-
-        }catch (IOException e){
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public ReadStatus update(ReadStatus readStatus) {
-        Path path = resolvePath(readStatus.getUserId());
-        if (Files.exists(path)) {
-            try (
-                    FileOutputStream fos = new FileOutputStream(path.toFile());
-                    ObjectOutputStream oos = new ObjectOutputStream(fos)
-            ) {
-                oos.writeObject(readStatus);
-                return readStatus;
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        } else {
-            throw new NoSuchElementException("ReadStatus with id " + readStatus.getUserId() + " not found");
-        }
-
-    }
-
-    @Override
-    public ReadStatus save(ReadStatus readStatus) {
-        Path path = resolvePath(readStatus.getUserId());
-        if (!Files.exists(path)) {
-            try (
-                    FileOutputStream fos = new FileOutputStream(path.toFile());
-                    ObjectOutputStream oos = new ObjectOutputStream(fos)
-            ) {
-                oos.writeObject(readStatus);
-                return readStatus;
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        }
-        throw new IllegalStateException("ReadStatus with id " + readStatus.getUserId() + " already exists");
-    }
-
-    @Override
-    public boolean existsById(UUID messageId) {
-        ReadStatus readStatus = null;
-        Path path = resolvePath(messageId);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-                readStatus = (ReadStatus) ois.readObject();
-            } catch (IOException | ClassNotFoundException e){
-                throw new RuntimeException(e);
-            }
-        } else {
-            throw new NoSuchElementException("ReadStatus with id " + readStatus.getUserId() + " not found");
-        }
-        return readStatus != null;
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
     }
 
     @Override
@@ -199,19 +134,4 @@ public class FileReadStatusRepository implements ReadStatusRepository {
         this.findAllByChannelId(channelId)
                 .forEach(readStatus -> this.deleteById(readStatus.getId()));
     }
-
-    @Override
-    public ReadStatus delete(ReadStatus readStatus) {
-        Path path = resolvePath(readStatus.getUserId());
-        if (Files.notExists(path)) {
-            throw new NoSuchElementException("ReadStatus with id " + readStatus.getUserId() + " not found");
-        }
-        try {
-            Files.delete(path);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-        return readStatus;
-    }
-
 }
