@@ -2,16 +2,18 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.UserRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
 @ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 @Repository
@@ -19,16 +21,17 @@ public class FileUserRepository implements UserRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileUserRepository() {
-        this.DIRECTORY = Path.of(System.getProperty("user.dir"), "file-data-map", User.class.getSimpleName());
-            if (Files.notExists(DIRECTORY)) {
-                try {
-                    Files.createDirectories(DIRECTORY);
-                } catch (Exception e) {
-                    throw new RuntimeException(e);
-                }
+    public FileUserRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, User.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
-
     }
 
     private Path resolvePath(UUID id) {
@@ -37,7 +40,7 @@ public class FileUserRepository implements UserRepository {
 
     @Override
     public User save(User user) {
-        Path path = resolvePath(user.getUserId());
+        Path path = resolvePath(user.getId());
         try (
                 FileOutputStream fos = new FileOutputStream(path.toFile());
                 ObjectOutputStream oos = new ObjectOutputStream(fos)
@@ -46,15 +49,13 @@ public class FileUserRepository implements UserRepository {
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-
         return user;
     }
 
-
     @Override
-    public Optional<User> findByUserId(UUID userId) {
+    public Optional<User> findById(UUID id) {
         User userNullable = null;
-        Path path = resolvePath(userId);
+        Path path = resolvePath(id);
         if (Files.exists(path)) {
             try (
                     FileInputStream fis = new FileInputStream(path.toFile());
@@ -65,35 +66,26 @@ public class FileUserRepository implements UserRepository {
                 throw new RuntimeException(e);
             }
         }
-
-        return Optional.ofNullable(Optional.ofNullable(userNullable)
-                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found")));
+        return Optional.ofNullable(userNullable);
     }
 
     @Override
-    public Optional<User> findByUserName(String userName) {
-        try {
-            return findAllUser().stream()
-                    .filter(user -> user.getUserName().equals(userName))
-                    .findFirst();
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+    public Optional<User> findByUsername(String username) {
+        return this.findAll().stream()
+                .filter(user -> user.getUsername().equals(username))
+                .findFirst();
     }
 
-
     @Override
-    public List<User> findAllUser() {
-
-        try {
-            return Files.list(DIRECTORY)
+    public List<User> findAll() {
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
                     .filter(path -> path.toString().endsWith(EXTENSION))
                     .map(path -> {
                         try (
                                 FileInputStream fis = new FileInputStream(path.toFile());
                                 ObjectInputStream ois = new ObjectInputStream(fis)
                         ) {
-                            System.out.println(path);
                             return (User) ois.readObject();
                         } catch (IOException | ClassNotFoundException e) {
                             throw new RuntimeException(e);
@@ -106,64 +98,30 @@ public class FileUserRepository implements UserRepository {
     }
 
     @Override
-    public boolean existsById(UUID userId) {
-        User userNullable = null;
-        Path path = resolvePath(userId);
-        if (Files.notExists(path)) {
-            try(
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ){
-                userNullable = (User) ois.readObject();
-            }catch (IOException | ClassNotFoundException e){
-                throw new RuntimeException(e);
-            }
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.delete(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-        return userNullable != null;
     }
 
     @Override
     public boolean existsByEmail(String email) {
-        try {
-            return findAllUser().stream()
-                    .anyMatch(user -> user.getEmail().equals(email));
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+        return this.findAll().stream()
+                .anyMatch(user -> user.getEmail().equals(email));
     }
 
     @Override
-    public boolean existsByUserName(String userName) {
-        try {
-            return findAllUser().stream()
-                    .anyMatch(user -> user.getUserName().equals(userName));
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+    public boolean existsByUsername(String username) {
+        return this.findAll().stream()
+                .anyMatch(user -> user.getUsername().equals(username));
     }
-
-    @Override
-    public boolean existByProfileId(UUID profileId) {
-        try {
-            return findAllUser().stream()
-                    .anyMatch(user -> user.getProfileId().equals(profileId));
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public void deleteById(UUID userId) {
-        Path path = resolvePath(userId);
-        if (Files.notExists(path)) {
-            throw new NoSuchElementException("User with id " + userId + " not found");
-        }
-        try {
-            Files.delete(path);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-
 }
