@@ -1,17 +1,19 @@
 package com.sprint.mission.discodeit.repository.file;
 
-import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.entity.status.UserStatus;
+import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.NoSuchElementException;
+import java.nio.file.Paths;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
 @ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 @Repository
@@ -19,12 +21,14 @@ public class FileUserStatusRepository implements UserStatusRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileUserStatusRepository() {
-        this.DIRECTORY = Path.of(System.getProperty("user.dir"), "file-data-map", UserStatus.class.getSimpleName());
+    public FileUserStatusRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, UserStatus.class.getSimpleName());
         if (Files.notExists(DIRECTORY)) {
             try {
                 Files.createDirectories(DIRECTORY);
-            } catch (Exception e) {
+            } catch (IOException e) {
                 throw new RuntimeException(e);
             }
         }
@@ -36,127 +40,82 @@ public class FileUserStatusRepository implements UserStatusRepository {
 
     @Override
     public UserStatus save(UserStatus userStatus) {
-        Path path = resolvePath(userStatus.getUserId());
-        if (!Files.exists(path)) {
+        Path path = resolvePath(userStatus.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(userStatus);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        return userStatus;
+    }
+
+    @Override
+    public Optional<UserStatus> findById(UUID id) {
+        UserStatus userStatusNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
             try (
-                    FileOutputStream fos = new FileOutputStream(path.toFile());
-                    ObjectOutputStream oos = new ObjectOutputStream(fos)
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
             ) {
-                oos.writeObject(userStatus);
-                return userStatus;
-            } catch (IOException e) {
+                userStatusNullable = (UserStatus) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
                 throw new RuntimeException(e);
             }
         }
-
-        throw new IllegalStateException("UserStatus with id " + userStatus.getUserId() + " already exists");
+        return Optional.ofNullable(userStatusNullable);
     }
 
     @Override
     public Optional<UserStatus> findByUserId(UUID userId) {
-        UserStatus userNullable = null;
-        Path path = resolvePath(userId);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-                userNullable = (UserStatus) ois.readObject();
-            } catch (IOException | ClassNotFoundException e) {
-                throw new RuntimeException(e);
-            }
-        }
-
-        return Optional.ofNullable(Optional.ofNullable(userNullable)
-                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found")));
+        return findAll().stream()
+                .filter(userStatus -> userStatus.getUserId().equals(userId))
+                .findFirst();
     }
 
     @Override
-    public Optional<UserStatus> findAllByUserId(UUID userId) {
-        UserStatus userNullable = null;
-        Path path = resolvePath(userId);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-                userNullable = (UserStatus) ois.readObject();
-            } catch (IOException | ClassNotFoundException e) {
-                throw new RuntimeException(e);
-            }
-        }
-
-        return Optional.ofNullable(Optional.ofNullable(userNullable)
-                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found")));
-    }
-
-
-
-    @Override
-    public UserStatus update(UserStatus userStatus) {
-        Path path = resolvePath(userStatus.getUserId());
-        if (Files.exists(path)) {
-            try (
-                    FileOutputStream fos = new FileOutputStream(path.toFile());
-                    ObjectOutputStream oos = new ObjectOutputStream(fos)
-            ) {
-                 oos.writeObject(userStatus);
-                 return userStatus;
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        } else {
-            throw new NoSuchElementException("UserStatus with id " + userStatus.getUserId() + " not found");
-        }
-    }
-
-    @Override
-    public UserStatus updateByUserId(UUID userId, UserStatus userStatus) {
-        Path path = resolvePath(userStatus.getUserId());
-        if (Files.exists(path)) {
-            try (
-                    FileOutputStream fos = new FileOutputStream(path.toFile());
-                    ObjectOutputStream oos = new ObjectOutputStream(fos)
-            ) {
-                oos.writeObject(userStatus);
-                return userStatus;
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        } else {
-            throw new NoSuchElementException("UserStatus with id " + userStatus.getUserId() + " not found");
-        }
-    }
-
-    @Override
-    public boolean existsById(UUID userId) {
-        UserStatus userStatus = null;
-        Path path = resolvePath(userId);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-               userStatus = (UserStatus) ois.readObject();
-            } catch (IOException | ClassNotFoundException e){
-                throw new RuntimeException(e);
-            }
-        } else {
-            throw new NoSuchElementException("UserStatus with id " + userStatus.getUserId() + " not found");
-        }
-        return userStatus != null;
-    }
-
-    @Override
-    public void deleteById(UUID userId) {
-        Path path = resolvePath(userId);
-        if (Files.notExists(path)) {
-            throw new NoSuchElementException("UserStatus with id " + userId + " not found");
-        }
-        try {
-            Files.delete(path);
-        } catch (Exception e) {
+    public List<UserStatus> findAll() {
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (UserStatus) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.delete(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public void deleteByUserId(UUID userId) {
+        this.findByUserId(userId)
+                .ifPresent(userStatus -> this.deleteById(userStatus.getId()));
     }
 }
